codex-rs/tui/src/app/snapshots/codex_tui__app__owned_screen__tests__owned_screen_auto_frame_wide_renders_both_rails.snap
---
source: tui/src/app/owned_screen_tests.rs
expression: terminal.backend()
---
" Tasks                      │committed response                                                              │ Summary | Browser                "
"  New task  /new            │                                                                                │  Focused thread                  "
"  Search    /resume         │                                                                                │                                  "
"                            │                                                                                │  Environment, plan, agents,      "
"  Current                   │                                                                                │  and background tasks            "
"  • Parent                  │                                                                                │  appear here.                    "
"                            │                                                                                │                                  "
"                            │                                                                                │                                  "
"                            │                                                                                │                                  "
"                            │› draft sentinel                                                                │                                  "
"                            │                                                                                │                                  "
"                            │  gpt-5.5 default · /tmp/project                                                │                                  "
