codex-rs/tui/src/app/snapshots/codex_tui__app__owned_screen__tests__owned_screen_browser_preserves_narrow_overlay_chrome.snap
---
source: tui/src/app/owned_screen_tests.rs
expression: terminal.backend()
---
"committed response                      ┌ Summary | Browser ─────────────┐ "
"                                        │ [<] [>] [R] Example running    │ "
"                                        │ URL https://example.com        │ "
"                                        │Codex browser panel             │ "
"                                        │interactive page                │ "
"                                        │ready                           │ "
"                                        │                                │ "
"                                        │                                │ "
"                                        │                                │ "
"› draft sentinel                        │                                │ "
"                                        │ Esc hide    click control      │ "
"  gpt-5.5 default · /tmp/project        └────────────────────────────────┘ "
