codex-rs/tui/src/app/snapshots/codex_tui__app__owned_screen__tests__owned_screen_browser_renders_in_wide_right_rail.snap
---
source: tui/src/app/owned_screen_tests.rs
expression: terminal.backend()
---
" Tasks                      │committed response                                                              ┃ Summary | Browser                "
"  New task  /new            │                                                                                ┃ [<] [>] [R] Example running      "
"  Search    /resume         │                                                                                ┃ URL https://example.com          "
"                            │                                                                                ┃Codex browser panel               "
"  Current                   │                                                                                ┃interactive page                  "
"  • Parent                  │                                                                                ┃ready                             "
"                            │                                                                                ┃                                  "
"                            │                                                                                ┃                                  "
"                            │                                                                                ┃                                  "
"                            │› draft sentinel                                                                ┃                                  "
"                            │                                                                                ┃                                  "
"                            │  gpt-5.5 default · /tmp/project                                                ┃ Esc hide    click control        "
