codex-rs/tui/src/app/snapshots/codex_tui__app__owned_screen__tests__owned_screen_closed_parent_side_focused.snap
---
source: tui/src/app/owned_screen_tests.rs
expression: terminal.backend()
---
" Parent                                  │ Side  ⌥ + 1 / ⌥ + 2 focus               "
"parent transcript                        │╭───────────────────────────────────────╮"
"                                         ││ >_ OpenAI Codex (v0.0.0)              │"
"                                         ││                                       │"
"                                         ││ model:     loading   /model to change │"
"                                         ││ directory: /tmp/project               │"
"                                         │╰───────────────────────────────────────╯"
"                                         │                                         "
"                                         │                                         "
"› Conversation closed.                   │› side draft                             "
"                                         │                                         "
"  gpt-5.5 default · /tmp/project         │  gpt-5.5 default · /tmp/project         "
