codex-rs/tui/src/app/snapshots/codex_tui__app__owned_screen__tests__owned_screen_explicit_summary_renders_as_narrow_overlay.snap
---
source: tui/src/app/owned_screen_tests.rs
expression: terminal.backend()
---
"committed response                      ┌ Summary ───────────────────────┐ "
"                                        │  Focused thread                │ "
"                                        │                                │ "
"                                        │  Environment, plan, agents,    │ "
"                                        │  and background tasks          │ "
"                                        │  appear here.                  │ "
"                                        │                                │ "
"                                        │                                │ "
"                                        │                                │ "
"› draft sentinel                        │                                │ "
"                                        │                                │ "
"  gpt-5.5 default · /tmp/project        └────────────────────────────────┘ "
