codex-rs/tui/src/app/snapshots/codex_tui__app__owned_screen__tests__owned_screen_narrow_side_focused.snap
---
source: tui/src/app/owned_screen_tests.rs
expression: terminal.backend()
---
" Side  ⌥ + 1 / ⌥ + 2 focus                                                        "
"side transcript                                                                   "
"                                                                                  "
"╭───────────────────────────────────────╮                                         "
"│ >_ OpenAI Codex (v0.0.0)              │                                         "
"│                                       │                                         "
"│ model:     loading   /model to change │                                         "
"│ directory: /tmp/project               │                                         "
"╰───────────────────────────────────────╯                                         "
"                                                                                  "
"                                                                                  "
"› side draft                                                                      "
"                                                                                  "
"  gpt-5.5 default · /tmp/project                                                  "
