codex-rs/tui/src/app/snapshots/codex_tui__app__owned_screen__tests__owned_screen_resized_parent_wide_dragging.snap
---
source: tui/src/app/owned_screen_tests.rs
expression: active.backend()
---
" Parent  ⌥ + 1 / ⌥ + 2 focus                                          ┃ Side                                            "
"parent transcript                                                     ┃╭───────────────────────────────────────╮        "
"                                                                      ┃│ >_ OpenAI Codex (v0.0.0)              │        "
"                                                                      ┃│                                       │        "
"                                                                      ┃│ model:     loading   /model to change │        "
"                                                                      ┃│ directory: /tmp/project               │        "
"                                                                      ┃╰───────────────────────────────────────╯        "
"                                                                      ┃                                                 "
"                                                                      ┃                                                 "
"› parent draft                                                        ┃› side draft                                     "
"                                                                      ┃                                                 "
"  gpt-5.5 default · /tmp/project                                      ┃  gpt-5.5 default · /tmp/project                 "
